scenarios/03-multi-listener/https-tls-same-hostname/30-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-tls-split-port-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: demo
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "api.example.test"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: https-tls-split-port-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: tls
      protocol: TLS
      port: 9443
      hostname: "api.example.test"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
